[gd_scene load_steps=48 format=3 uid="uid://ci6qlxm5wnbsn"]

[ext_resource type="Script" path="res://scripts/world.gd" id="1_dyhku"]
[ext_resource type="Texture2D" uid="uid://fkatviyejo06" path="res://art/spritesforgamefr/fertile_ground.png" id="2_81er4"]
[ext_resource type="Texture2D" uid="uid://bjbboy540lrvq" path="res://art/spritesforgamefr/grass2222222.png" id="3_bdffx"]
[ext_resource type="Texture2D" uid="uid://bc64s3h4cu1gs" path="res://art/spritesforgamefr/ground1.png" id="4_fetdv"]
[ext_resource type="Texture2D" uid="uid://yemjioilbxr6" path="res://art/spritesforgamefr/bush.png" id="5_ttnkl"]
[ext_resource type="Texture2D" uid="uid://d2drxd7l5osq3" path="res://art/spritesforgamefr/grass_222.png" id="6_3gwih"]
[ext_resource type="Texture2D" uid="uid://d3bd0fv0u3q73" path="res://art/spritesforgamefr/potential_fert_ground.png" id="7_kut6h"]
[ext_resource type="FontFile" uid="uid://cqjpfxt4wvcfl" path="res://art/spritesforgamefr/Poco.ttf" id="8_cxnfg"]
[ext_resource type="Script" path="res://scripts/label.gd" id="9_0apyp"]
[ext_resource type="Script" path="res://scripts/Label2.gd" id="10_dcctn"]
[ext_resource type="Script" path="res://scripts/Label3.gd" id="11_cbsp8"]
[ext_resource type="PackedScene" uid="uid://ccbhmwb1ghgoh" path="res://scenes/wheat_seed_pack.tscn" id="12_j1mp1"]
[ext_resource type="PackedScene" uid="uid://caggjja3kclcr" path="res://scenes/growing_area.tscn" id="13_xrhet"]
[ext_resource type="PackedScene" uid="uid://ddc33tpwo0noc" path="res://scenes/bible.tscn" id="14_h35ov"]
[ext_resource type="PackedScene" uid="uid://dengtwcy5hw2r" path="res://scenes/player.tscn" id="15_jgsu5"]
[ext_resource type="PackedScene" uid="uid://ccnqfl2n8m73x" path="res://scenes/potato_seed_pack.tscn" id="16_10uc6"]
[ext_resource type="PackedScene" uid="uid://bft2yjrwvpvds" path="res://scenes/market.tscn" id="17_gc2o6"]
[ext_resource type="PackedScene" uid="uid://cxpcq3wsu5hxy" path="res://scenes/potion_1.tscn" id="18_oxkjw"]
[ext_resource type="PackedScene" uid="uid://dsy01t3f02qqh" path="res://scenes/sword.tscn" id="19_3gd8j"]
[ext_resource type="PackedScene" uid="uid://bx8rs0637gge0" path="res://growing_area_2.tscn" id="20_ipmft"]
[ext_resource type="PackedScene" uid="uid://1j4umdj8fqfg" path="res://growing_area_3.tscn" id="21_jtmyw"]
[ext_resource type="PackedScene" uid="uid://blj3pwe8th1wi" path="res://growing_area_4.tscn" id="22_2f4ba"]
[ext_resource type="PackedScene" uid="uid://bys373pj3vqsu" path="res://growing_area_5.tscn" id="23_4ksxw"]
[ext_resource type="PackedScene" uid="uid://w5qgqk2s84yk" path="res://growing_area_6.tscn" id="24_q0xuk"]
[ext_resource type="PackedScene" uid="uid://b77o41scrj08n" path="res://scenes/fights.tscn" id="25_8yw1t"]
[ext_resource type="PackedScene" uid="uid://dsges0sg5lqud" path="res://scenes/plants.tscn" id="26_f6fck"]
[ext_resource type="PackedScene" uid="uid://deyu5n2hqpjpq" path="res://scenes/guitar.tscn" id="27_88qll"]
[ext_resource type="PackedScene" uid="uid://cs6e060trqfh" path="res://scenes/dumbbells.tscn" id="28_glug3"]
[ext_resource type="Script" path="res://scripts/tutorial.gd" id="29_hwi7f"]
[ext_resource type="Texture2D" uid="uid://bksnesdu5w563" path="res://art/spritesforgamefr/bbbbg.jpg" id="30_a8g6k"]
[ext_resource type="Script" path="res://scripts/darkness.gd" id="31_71noo"]
[ext_resource type="Texture2D" uid="uid://b7jtkju0avvt6" path="res://art/spritesforgamefr/dyin_sceness.png" id="32_ugb7r"]
[ext_resource type="Script" path="res://scripts/death_cometh_sprite.gd" id="33_314nx"]
[ext_resource type="PackedScene" uid="uid://dr1kssmit4j07" path="res://scenes/story.tscn" id="34_rqfon"]
[ext_resource type="PackedScene" uid="uid://dtmwsm7iwmx1o" path="res://scenes/good_ending.tscn" id="35_iwp3c"]
[ext_resource type="PackedScene" uid="uid://ciq7mhm5mk2jo" path="res://scenes/bad_ending.tscn" id="36_t2ia2"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_173nm"]
texture = ExtResource("2_81er4")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_b1jlm"]
texture = ExtResource("3_bdffx")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_r15yr"]
texture = ExtResource("4_fetdv")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_b74nl"]
texture = ExtResource("5_ttnkl")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yke8p"]
texture = ExtResource("6_3gwih")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0gqv7"]
texture = ExtResource("7_kut6h")
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_5layh"]
sources/0 = SubResource("TileSetAtlasSource_173nm")
sources/1 = SubResource("TileSetAtlasSource_b1jlm")
sources/2 = SubResource("TileSetAtlasSource_r15yr")
sources/5 = SubResource("TileSetAtlasSource_0gqv7")
sources/3 = SubResource("TileSetAtlasSource_b74nl")
sources/4 = SubResource("TileSetAtlasSource_yke8p")

[sub_resource type="LabelSettings" id="LabelSettings_jeuoo"]
font = ExtResource("8_cxnfg")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_fxfkg"]
font = ExtResource("8_cxnfg")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_vgthw"]
font = ExtResource("8_cxnfg")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_y7tkh"]
font = ExtResource("8_cxnfg")
font_size = 30

[node name="world" type="Node2D"]
script = ExtResource("1_dyhku")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_5layh")
format = 2
layer_0/name = "bushes"
layer_0/tile_data = PackedInt32Array(-196602, 3, 0, -131068, 3, 0, 65542, 3, 0, 131073, 3, 0, 131066, 3, 0, -65539, 3, 0, -196608, 3, 0, 65540, 3, 0, 262138, 3, 0, -196612, 3, 0, -196611, 3, 0, -196610, 3, 0, 262151, 3, 0, 262150, 3, 0, 196615, 3, 0, 262136, 3, 0, -131080, 3, 0, -131064, 3, 0, 131080, 3, 0)
layer_1/name = "1"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = -2
layer_1/tile_data = PackedInt32Array(262141, 4, 0, 262142, 4, 0, 262140, 4, 0, 262139, 4, 0, 262138, 4, 0, 262137, 4, 0, 262136, 2, 0, 196600, 4, 0, 262143, 1, 0, 196608, 1, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 4, 0, 196615, 4, 0, -196615, 1, 0, -196614, 1, 0, -196613, 1, 0, -196612, 4, 0, -196611, 4, 0, -196610, 4, 0, -196609, 1, 0, -262144, 1, 0, -262143, 1, 0, -262142, 1, 0, -262141, 1, 0, -262140, 1, 0, -262139, 1, 0, -262138, 1, 0, -262137, 1, 0, -196601, 1, 0, -131065, 1, 0, -65529, 4, 0, 7, 4, 0, 65543, 1, 0, 131079, 1, 0, 131064, 4, 0, 65528, 4, 0, -8, 4, 0, -65544, 4, 0, -131080, 1, 0, -196616, 1, 0, -131079, 1, 0, -65543, 4, 0, -7, 4, 0, 65529, 4, 0, 131065, 4, 0, 196601, 4, 0, 196602, 4, 0, 196603, 4, 0, 196604, 4, 0, 196605, 4, 0, -131078, 1, 0, -131077, 1, 0, -131076, 1, 0, -65540, 4, 0, -4, 4, 0, 131074, 4, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 65541, 4, 0, 65542, 1, 0, 6, 4, 0, -65530, 4, 0, 131078, 4, 0, -131066, 4, 0, -196602, 1, 0, -196603, 4, 0, -131067, 4, 0, -65531, 4, 0, 5, 4, 0, 4, 4, 0, 65540, 4, 0, 65539, 4, 0, 65538, 4, 0, 65537, 4, 0, 131073, 4, 0, 131072, 4, 0, 196607, 4, 0, 196606, 4, 0, 131070, 4, 0, 131069, 4, 0, 131068, 4, 0, 131067, 4, 0, 65531, 4, 0, 65532, 4, 0, -5, 4, 0, -65541, 1, 0, -65542, 1, 0, -6, 1, 0, 65530, 4, 0, 131066, 4, 0, -65532, 4, 0, -131068, 4, 0, -196604, 4, 0, -196605, 1, 0, -196606, 1, 0, -196607, 1, 0, -196608, 1, 0, -131073, 4, 0, -131074, 4, 0, -131075, 4, 0, -65539, 4, 0, -65538, 4, 0, -65537, 1, 0, -131072, 1, 0, -131071, 1, 0, -131070, 4, 0, -131069, 4, 0, -65533, 4, 0, 3, 4, 0, 65536, 4, 0, 131071, 4, 0, -3, 4, 0, 65533, 4, 0, 65534, 4, 0, -2, 4, 0, -65534, 4, 0, 2, 4, 0, 1, 5, 0, 0, 5, 0, 65535, 5, 0, -1, 5, 0, -65536, 5, 0, -65535, 5, 0, 327671, 2, 0, 327672, 4, 0, 327673, 4, 0, 327674, 4, 0, 327675, 4, 0, 327676, 4, 0, 327677, 4, 0, 327678, 4, 0, 327679, 4, 0, 262144, 4, 0, 262145, 4, 0, 262146, 4, 0, 262147, 4, 0, 262148, 4, 0, 262149, 4, 0, 262150, 4, 0, 262151, 4, 0, 262152, 4, 0, 196616, 4, 0, 131080, 4, 0, 65544, 2, 0, 8, 2, 0, -65528, 2, 0, -131064, 2, 0, -196600, 2, 0, -262136, 2, 0, -327672, 4, 0, -327673, 4, 0, -327674, 4, 0, -327675, 4, 0, -327676, 4, 0, -327677, 4, 0, -327678, 4, 0, -327679, 4, 0, -327680, 4, 0, -262145, 4, 0, -262146, 4, 0, -262147, 4, 0, -262148, 1, 0, -262149, 1, 0, -262150, 1, 0, -262151, 1, 0, -262152, 2, 0, -262153, 2, 0, -196617, 2, 0, -131081, 1, 0, -65545, 4, 0, -9, 4, 0, 65527, 4, 0, 131063, 4, 0, 196599, 2, 0, 262135, 2, 0, 393207, 2, 0, 393208, 2, 0, 393209, 2, 0, 393210, 2, 0, 393211, 2, 0, 393212, 2, 0, 393213, 2, 0, 393214, 2, 0, 393215, 2, 0, 327680, 2, 0, 327681, 2, 0, 327682, 2, 0, 327683, 2, 0, 327684, 2, 0, 327685, 2, 0, 327686, 2, 0, 327687, 2, 0, 327688, 2, 0)
layer_2/name = "2"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = -1
layer_2/tile_data = PackedInt32Array()
layer_3/name = "3"
layer_3/enabled = true
layer_3/modulate = Color(1, 1, 1, 1)
layer_3/y_sort_enabled = false
layer_3/y_sort_origin = 0
layer_3/z_index = 0
layer_3/tile_data = PackedInt32Array()

[node name="enemy_spawn_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -144.0
offset_top = -81.0
offset_right = 144.0
offset_bottom = 81.0
metadata/_edit_use_anchors_ = true

[node name="Label111" type="Label" parent="Control"]
texture_filter = 1
layout_mode = 0
offset_left = 2.0
offset_top = -3.0
offset_right = 360.0
offset_bottom = 26.0
scale = Vector2(0.8, 0.8)
text = "real"
label_settings = SubResource("LabelSettings_jeuoo")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("9_0apyp")

[node name="Label2" type="Label" parent="Control"]
layout_mode = 0
offset_left = 56.0
offset_top = -5.0
offset_right = 344.0
offset_bottom = 27.0
scale = Vector2(0.8, 0.8)
text = "real"
label_settings = SubResource("LabelSettings_fxfkg")
horizontal_alignment = 2
vertical_alignment = 1
script = ExtResource("10_dcctn")

[node name="Label3" type="Label" parent="Control"]
layout_mode = 0
offset_left = 9.0
offset_top = -2.0
offset_right = 49.0
offset_bottom = 25.0
scale = Vector2(0.8, 0.8)
text = "real"
label_settings = SubResource("LabelSettings_vgthw")
vertical_alignment = 1
script = ExtResource("11_cbsp8")

[node name="wheat_seed_pack" parent="." instance=ExtResource("12_j1mp1")]
position = Vector2(82, -2)

[node name="growing_area" parent="." instance=ExtResource("13_xrhet")]
position = Vector2(-8, 8)

[node name="bible" parent="." instance=ExtResource("14_h35ov")]
position = Vector2(-103, -4)

[node name="Player" parent="." instance=ExtResource("15_jgsu5")]
position = Vector2(-6, 109)

[node name="potato_seed_pack" parent="." instance=ExtResource("16_10uc6")]
position = Vector2(-103, -5)

[node name="market" parent="." instance=ExtResource("17_gc2o6")]
position = Vector2(-121, -4)

[node name="potion1" parent="." instance=ExtResource("18_oxkjw")]
position = Vector2(-103, -5)

[node name="plant_round_timer" type="Timer" parent="."]
wait_time = 30.0

[node name="fight_round_timer" type="Timer" parent="."]
wait_time = 30.0

[node name="sword" parent="." instance=ExtResource("19_3gd8j")]
position = Vector2(-104, -4)

[node name="growing_area2" parent="." instance=ExtResource("20_ipmft")]
position = Vector2(-8, -8)

[node name="growing_area3" parent="." instance=ExtResource("21_jtmyw")]
position = Vector2(8, -8)

[node name="growing_area4" parent="." instance=ExtResource("22_2f4ba")]
position = Vector2(8, 8)

[node name="growing_area5" parent="." instance=ExtResource("23_4ksxw")]
position = Vector2(24, 8)

[node name="growing_area6" parent="." instance=ExtResource("24_q0xuk")]
position = Vector2(24, -8)

[node name="fights" parent="." instance=ExtResource("25_8yw1t")]
position = Vector2(71, -67)

[node name="plants" parent="." instance=ExtResource("26_f6fck")]
position = Vector2(70, -68)

[node name="guitar" parent="." instance=ExtResource("27_88qll")]
position = Vector2(-104, -4)

[node name="dumbbells" parent="." instance=ExtResource("28_glug3")]
position = Vector2(-103, -4)

[node name="Label" type="Label" parent="."]
texture_filter = 1
offset_left = -104.0
offset_top = -36.0
offset_right = 262.0
offset_bottom = 81.0
scale = Vector2(0.5, 0.5)
text = "    You can buy items 
<- and sell crops  
     at the market!"
label_settings = SubResource("LabelSettings_y7tkh")
script = ExtResource("29_hwi7f")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.521569)
z_index = 2
texture = ExtResource("30_a8g6k")
script = ExtResource("31_71noo")

[node name="death_cometh_sprite" type="Sprite2D" parent="."]
visible = false
z_index = 9
position = Vector2(2.50001, 7.00001)
scale = Vector2(1.14453, 1.29167)
texture = ExtResource("32_ugb7r")
script = ExtResource("33_314nx")

[node name="story" parent="." instance=ExtResource("34_rqfon")]
visible = false
z_index = 8
offset_left = -37.0
offset_top = -68.0
offset_right = -37.0
offset_bottom = -68.0

[node name="good_ending" parent="." instance=ExtResource("35_iwp3c")]
visible = false
z_index = 9
position = Vector2(-1.5, -3.432)
scale = Vector2(1.2, 1.267)

[node name="bad_ending" parent="." instance=ExtResource("36_t2ia2")]
visible = false
z_index = 9
position = Vector2(-1.5, -6.26001)
scale = Vector2(1.2, 1.26028)

[connection signal="timeout" from="enemy_spawn_timer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="plant_round_timer" to="." method="_on_plant_round_timer_timeout"]
[connection signal="timeout" from="fight_round_timer" to="." method="_on_fight_round_timer_timeout"]
